fix remote service calling, add returning local&remote tasks